--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,13 @@
 	<link rel="stylesheet" href="/client/css/main.css" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>CubeJump.io</title>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5016026564626619",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
 <div id="startMenuBackground">
